--- a/src/frontend/styles/components/shared_widgets.styl
+++ b/src/frontend/styles/components/shared_widgets.styl
@@ -163,12 +163,16 @@ input
   height: calc(100% - 66px)
   top: 38px
   z-index: 0
+  display: flex
+  flex-direction: column
+  width: 100%
 
 #ROOT
   background-color: BACKGROUND_COLOR
   color: TEXT_CONTENT_COLOR
   height: 100%
-  width: 100vw
+  flex: 1
+  min-width: 0
   position: relative
 
 #main
